syntax = "proto3";

package sirsi.agent.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "sirsi/agent/v1/agent_service.proto";

option go_package = "github.com/sirsinexus/core/proto/sirsi/agent/v1";
option java_package = "com.sirsinexus.agent.sirsi.v1";
option java_multiple_files = true;
option csharp_namespace = "SirsiNexus.Agent.Sirsi.V1";

// ============================================================================
// SIRSI INTERFACE SERVICE
// ============================================================================

service SirsiInterfaceService {
  // Core Communication
  rpc ProcessSirsiRequest(SirsiRequest) returns (SirsiResponse);
  rpc SendSirsiResponse(SirsiResponse) returns (SirsiAck);
  
  // Context Management
  rpc SyncContext(ContextSyncRequest) returns (ContextSyncResponse);
  rpc UpdateContext(ContextUpdate) returns (ContextUpdateResponse);
  
  // Capability Management
  rpc ReportCapabilities(CapabilityReport) returns (CapabilityAck);
  rpc UpdateCapabilities(CapabilityUpdate) returns (CapabilityUpdateResponse);
  
  // Health Monitoring
  rpc ReportHealth(HealthReport) returns (HealthAck);
  rpc GetHealthStatus(HealthStatusRequest) returns (HealthStatusResponse);
  
  // Quality Enforcement
  rpc ValidateQuality(QualityValidationRequest) returns (QualityValidationResponse);
  rpc EnforceStandards(StandardsEnforcementRequest) returns (StandardsEnforcementResponse);
}

// ============================================================================
// CORE COMMUNICATION MESSAGES
// ============================================================================

message SirsiRequest {
  string request_id = 1;
  string agent_id = 2;
  string session_id = 3;
  string user_id = 4;
  SirsiRequestType request_type = 5;
  string message = 6;
  google.protobuf.Struct context = 7;
  RequestPriority priority = 8;
  google.protobuf.Timestamp timestamp = 9;
  optional uint64 timeout_ms = 10;
  RequestParameters parameters = 11;
}

message SirsiResponse {
  string request_id = 1;
  string agent_id = 2;
  string session_id = 3;
  SirsiResponseType response_type = 4;
  SirsiResponseStatus status = 5;
  string content = 6;
  repeated AgentSuggestion suggestions = 7;
  google.protobuf.Struct context_updates = 8;
  optional string error_message = 9;
  float confidence_score = 10;
  uint64 processing_time_ms = 11;
  google.protobuf.Timestamp timestamp = 12;
  ResponseMetrics metrics = 13;
}

message SirsiAck {
  string request_id = 1;
  bool acknowledged = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// ============================================================================
// REQUEST/RESPONSE TYPES
// ============================================================================

enum SirsiRequestType {
  SIRSI_REQUEST_TYPE_UNSPECIFIED = 0;
  SIRSI_REQUEST_TYPE_PROCESS_MESSAGE = 1;
  SIRSI_REQUEST_TYPE_GET_SUGGESTIONS = 2;
  SIRSI_REQUEST_TYPE_GET_STATUS = 3;
  SIRSI_REQUEST_TYPE_GET_CAPABILITIES = 4;
  SIRSI_REQUEST_TYPE_UPDATE_CONTEXT = 5;
  SIRSI_REQUEST_TYPE_EXECUTE_ACTION = 6;
  SIRSI_REQUEST_TYPE_HEALTH_CHECK = 7;
  SIRSI_REQUEST_TYPE_SHUTDOWN = 8;
  SIRSI_REQUEST_TYPE_QUERY = 9;
  SIRSI_REQUEST_TYPE_ANALYZE = 10;
  SIRSI_REQUEST_TYPE_GENERATE = 11;
}

enum SirsiResponseType {
  SIRSI_RESPONSE_TYPE_UNSPECIFIED = 0;
  SIRSI_RESPONSE_TYPE_MESSAGE_PROCESSED = 1;
  SIRSI_RESPONSE_TYPE_SUGGESTIONS_GENERATED = 2;
  SIRSI_RESPONSE_TYPE_STATUS_REPORT = 3;
  SIRSI_RESPONSE_TYPE_CAPABILITIES_REPORT = 4;
  SIRSI_RESPONSE_TYPE_CONTEXT_UPDATED = 5;
  SIRSI_RESPONSE_TYPE_ACTION_EXECUTED = 6;
  SIRSI_RESPONSE_TYPE_HEALTH_STATUS = 7;
  SIRSI_RESPONSE_TYPE_ERROR = 8;
  SIRSI_RESPONSE_TYPE_QUERY_RESULT = 9;
  SIRSI_RESPONSE_TYPE_ANALYSIS_RESULT = 10;
  SIRSI_RESPONSE_TYPE_GENERATION_RESULT = 11;
}

enum SirsiResponseStatus {
  SIRSI_RESPONSE_STATUS_UNSPECIFIED = 0;
  SIRSI_RESPONSE_STATUS_SUCCESS = 1;
  SIRSI_RESPONSE_STATUS_PARTIAL = 2;
  SIRSI_RESPONSE_STATUS_FAILED = 3;
  SIRSI_RESPONSE_STATUS_REQUIRES_CONFIRMATION = 4;
  SIRSI_RESPONSE_STATUS_REQUIRES_ADDITIONAL_INFO = 5;
  SIRSI_RESPONSE_STATUS_IN_PROGRESS = 6;
}

enum RequestPriority {
  REQUEST_PRIORITY_UNSPECIFIED = 0;
  REQUEST_PRIORITY_LOW = 1;
  REQUEST_PRIORITY_NORMAL = 2;
  REQUEST_PRIORITY_HIGH = 3;
  REQUEST_PRIORITY_CRITICAL = 4;
  REQUEST_PRIORITY_EMERGENCY = 5;
}

// ============================================================================
// REQUEST PARAMETERS
// ============================================================================

message RequestParameters {
  oneof parameters {
    QueryParameters query_params = 1;
    ActionParameters action_params = 2;
    AnalysisParameters analysis_params = 3;
    GenerationParameters generation_params = 4;
  }
}

message QueryParameters {
  QueryType query_type = 1;
  repeated string resource_ids = 2;
  google.protobuf.Struct filters = 3;
  bool include_metadata = 4;
}

message ActionParameters {
  ActionType action_type = 1;
  string resource_id = 2;
  google.protobuf.Struct action_config = 3;
  bool dry_run = 4;
  bool require_confirmation = 5;
}

message AnalysisParameters {
  AnalysisType analysis_type = 1;
  AnalysisDepth depth = 2;
  repeated string target_resources = 3;
  google.protobuf.Struct analysis_config = 4;
}

message GenerationParameters {
  GenerationType generation_type = 1;
  string template_id = 2;
  google.protobuf.Struct generation_config = 3;
  string output_format = 4;
}

// ============================================================================
// PARAMETER ENUMS
// ============================================================================

enum QueryType {
  QUERY_TYPE_UNSPECIFIED = 0;
  QUERY_TYPE_RESOURCE_STATUS = 1;
  QUERY_TYPE_CONFIGURATION_INFO = 2;
  QUERY_TYPE_PERFORMANCE_METRICS = 3;
  QUERY_TYPE_SECURITY_STATUS = 4;
  QUERY_TYPE_COST_ANALYSIS = 5;
  QUERY_TYPE_COMPLIANCE_CHECK = 6;
}

enum ActionType {
  ACTION_TYPE_UNSPECIFIED = 0;
  ACTION_TYPE_CREATE_RESOURCE = 1;
  ACTION_TYPE_UPDATE_RESOURCE = 2;
  ACTION_TYPE_DELETE_RESOURCE = 3;
  ACTION_TYPE_SCALE_RESOURCE = 4;
  ACTION_TYPE_MONITOR_RESOURCE = 5;
  ACTION_TYPE_SECURE_RESOURCE = 6;
}

enum AnalysisType {
  ANALYSIS_TYPE_UNSPECIFIED = 0;
  ANALYSIS_TYPE_PERFORMANCE = 1;
  ANALYSIS_TYPE_COST = 2;
  ANALYSIS_TYPE_SECURITY = 3;
  ANALYSIS_TYPE_COMPLIANCE = 4;
  ANALYSIS_TYPE_OPTIMIZATION = 5;
  ANALYSIS_TYPE_RISK = 6;
}

enum AnalysisDepth {
  ANALYSIS_DEPTH_UNSPECIFIED = 0;
  ANALYSIS_DEPTH_QUICK = 1;
  ANALYSIS_DEPTH_STANDARD = 2;
  ANALYSIS_DEPTH_COMPREHENSIVE = 3;
  ANALYSIS_DEPTH_EXPERT = 4;
}

enum GenerationType {
  GENERATION_TYPE_UNSPECIFIED = 0;
  GENERATION_TYPE_INFRASTRUCTURE_CODE = 1;
  GENERATION_TYPE_CONFIGURATION_FILES = 2;
  GENERATION_TYPE_SECURITY_POLICIES = 3;
  GENERATION_TYPE_MONITORING_RULES = 4;
  GENERATION_TYPE_DOCUMENTATION = 5;
  GENERATION_TYPE_SCRIPTS = 6;
}

// ============================================================================
// CONTEXT MANAGEMENT
// ============================================================================

message ContextSyncRequest {
  string agent_id = 1;
  string session_id = 2;
  google.protobuf.Timestamp last_sync = 3;
  bool force_full_sync = 4;
}

message ContextSyncResponse {
  AgentContext current_context = 1;
  repeated ContextUpdate updates = 2;
  google.protobuf.Timestamp sync_timestamp = 3;
}

message ContextUpdate {
  string update_id = 1;
  string agent_id = 2;
  string session_id = 3;
  ContextUpdateType update_type = 4;
  google.protobuf.Struct data = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message ContextUpdateResponse {
  string update_id = 1;
  bool applied = 2;
  optional string error_message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message AgentContext {
  string agent_id = 1;
  string session_id = 2;
  google.protobuf.Struct current_state = 3;
  google.protobuf.Struct operational_context = 4;
  repeated ConversationEntry conversation_history = 5;
  google.protobuf.Timestamp last_updated = 6;
}

message ConversationEntry {
  string entry_id = 1;
  string message = 2;
  string response = 3;
  string agent_id = 4;
  google.protobuf.Struct context = 5;
  google.protobuf.Timestamp timestamp = 6;
}

enum ContextUpdateType {
  CONTEXT_UPDATE_TYPE_UNSPECIFIED = 0;
  CONTEXT_UPDATE_TYPE_STATE_CHANGE = 1;
  CONTEXT_UPDATE_TYPE_PREFERENCE_UPDATE = 2;
  CONTEXT_UPDATE_TYPE_CONVERSATION_ENTRY = 3;
  CONTEXT_UPDATE_TYPE_OPERATIONAL_CHANGE = 4;
}

// ============================================================================
// CAPABILITY MANAGEMENT
// ============================================================================

message CapabilityReport {
  string agent_id = 1;
  AgentCapabilities capabilities = 2;
  repeated CapabilityMetric metrics = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message CapabilityAck {
  string agent_id = 1;
  bool acknowledged = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CapabilityUpdate {
  string agent_id = 1;
  string capability_id = 2;
  CapabilityUpdateType update_type = 3;
  ProficiencyLevel new_proficiency = 4;
  ProficiencyMetrics metrics = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message CapabilityUpdateResponse {
  string agent_id = 1;
  string capability_id = 2;
  bool updated = 3;
  optional string error_message = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message AgentCapabilities {
  string agent_type = 1;
  repeated string supported_operations = 2;
  repeated string cloud_providers = 3;
  repeated string specializations = 4;
  bool can_spawn_subagents = 5;
  bool can_coordinate = 6;
  uint32 max_concurrent_operations = 7;
  uint32 estimated_response_time_ms = 8;
  repeated CapabilityDefinition capabilities = 9;
}

message CapabilityDefinition {
  string capability_id = 1;
  string name = 2;
  string description = 3;
  CapabilityCategory category = 4;
  ProficiencyLevel proficiency = 5;
  ProficiencyMetrics metrics = 6;
}

message CapabilityMetric {
  string capability_id = 1;
  uint64 usage_count = 2;
  double success_rate = 3;
  double average_response_time_ms = 4;
  google.protobuf.Timestamp last_used = 5;
}

enum CapabilityUpdateType {
  CAPABILITY_UPDATE_TYPE_UNSPECIFIED = 0;
  CAPABILITY_UPDATE_TYPE_PROFICIENCY_CHANGE = 1;
  CAPABILITY_UPDATE_TYPE_METRICS_UPDATE = 2;
  CAPABILITY_UPDATE_TYPE_CAPABILITY_ADDED = 3;
  CAPABILITY_UPDATE_TYPE_CAPABILITY_REMOVED = 4;
}

enum ProficiencyLevel {
  PROFICIENCY_LEVEL_UNSPECIFIED = 0;
  PROFICIENCY_LEVEL_BEGINNER = 1;
  PROFICIENCY_LEVEL_INTERMEDIATE = 2;
  PROFICIENCY_LEVEL_ADVANCED = 3;
  PROFICIENCY_LEVEL_EXPERT = 4;
  PROFICIENCY_LEVEL_MASTER = 5;
}

enum CapabilityCategory {
  CAPABILITY_CATEGORY_UNSPECIFIED = 0;
  CAPABILITY_CATEGORY_INFRASTRUCTURE = 1;
  CAPABILITY_CATEGORY_SECURITY = 2;
  CAPABILITY_CATEGORY_MONITORING = 3;
  CAPABILITY_CATEGORY_ANALYTICS = 4;
  CAPABILITY_CATEGORY_AUTOMATION = 5;
  CAPABILITY_CATEGORY_INTEGRATION = 6;
}

message ProficiencyMetrics {
  double success_rate = 1;
  double average_response_time_ms = 2;
  double accuracy_score = 3;
  uint64 total_operations = 4;
  uint64 successful_operations = 5;
  google.protobuf.Timestamp last_updated = 6;
}

// ============================================================================
// HEALTH MONITORING
// ============================================================================

message HealthReport {
  string agent_id = 1;
  AgentHealthStatus health_status = 2;
  SystemMetrics system_metrics = 3;
  repeated string active_operations = 4;
  repeated string recent_errors = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message HealthAck {
  string agent_id = 1;
  bool acknowledged = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message HealthStatusRequest {
  string agent_id = 1;
  bool include_detailed_metrics = 2;
}

message HealthStatusResponse {
  string agent_id = 1;
  AgentHealthStatus health_status = 2;
  SystemMetrics system_metrics = 3;
  repeated HealthAlert alerts = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// SystemMetrics is imported from agent_service.proto

message HealthAlert {
  string alert_id = 1;
  HealthAlertLevel level = 2;
  string message = 3;
  google.protobuf.Struct details = 4;
  google.protobuf.Timestamp timestamp = 5;
}

enum AgentHealthStatus {
  AGENT_HEALTH_STATUS_UNSPECIFIED = 0;
  AGENT_HEALTH_STATUS_HEALTHY = 1;
  AGENT_HEALTH_STATUS_DEGRADED = 2;
  AGENT_HEALTH_STATUS_UNAVAILABLE = 3;
  AGENT_HEALTH_STATUS_ERROR = 4;
  AGENT_HEALTH_STATUS_MAINTENANCE = 5;
  AGENT_HEALTH_STATUS_SHUTDOWN = 6;
}

enum HealthAlertLevel {
  HEALTH_ALERT_LEVEL_UNSPECIFIED = 0;
  HEALTH_ALERT_LEVEL_INFO = 1;
  HEALTH_ALERT_LEVEL_WARNING = 2;
  HEALTH_ALERT_LEVEL_ERROR = 3;
  HEALTH_ALERT_LEVEL_CRITICAL = 4;
}

// ============================================================================
// QUALITY ENFORCEMENT
// ============================================================================

message QualityValidationRequest {
  string agent_id = 1;
  oneof validation_target {
    SirsiResponse response = 2;
    SirsiRequest request = 3;
    google.protobuf.Any custom_target = 4;
  }
  repeated QualityStandard standards = 5;
}

message QualityValidationResponse {
  bool is_valid = 1;
  QualityScore quality_score = 2;
  repeated QualityViolation violations = 3;
  repeated QualityRecommendation recommendations = 4;
  google.protobuf.Timestamp validated_at = 5;
}

message StandardsEnforcementRequest {
  string agent_id = 1;
  repeated QualityStandard standards = 2;
  EnforcementLevel enforcement_level = 3;
}

message StandardsEnforcementResponse {
  bool enforced = 1;
  repeated string applied_standards = 2;
  repeated string enforcement_actions = 3;
  google.protobuf.Timestamp enforced_at = 4;
}

message QualityScore {
  double overall_score = 1;
  double accuracy_score = 2;
  double completeness_score = 3;
  double relevance_score = 4;
  double performance_score = 5;
  double security_score = 6;
}

message QualityViolation {
  string violation_id = 1;
  QualityStandardType standard_type = 2;
  string description = 3;
  QualityViolationSeverity severity = 4;
  string remediation_suggestion = 5;
}

message QualityRecommendation {
  string recommendation_id = 1;
  string title = 2;
  string description = 3;
  QualityImpact impact = 4;
  uint32 priority = 5;
}

message QualityStandard {
  string standard_id = 1;
  QualityStandardType type = 2;
  string description = 3;
  google.protobuf.Struct parameters = 4;
  bool is_required = 5;
}

enum QualityStandardType {
  QUALITY_STANDARD_TYPE_UNSPECIFIED = 0;
  QUALITY_STANDARD_TYPE_ACCURACY = 1;
  QUALITY_STANDARD_TYPE_COMPLETENESS = 2;
  QUALITY_STANDARD_TYPE_RELEVANCE = 3;
  QUALITY_STANDARD_TYPE_PERFORMANCE = 4;
  QUALITY_STANDARD_TYPE_SECURITY = 5;
  QUALITY_STANDARD_TYPE_COMPLIANCE = 6;
}

enum QualityViolationSeverity {
  QUALITY_VIOLATION_SEVERITY_UNSPECIFIED = 0;
  QUALITY_VIOLATION_SEVERITY_LOW = 1;
  QUALITY_VIOLATION_SEVERITY_MEDIUM = 2;
  QUALITY_VIOLATION_SEVERITY_HIGH = 3;
  QUALITY_VIOLATION_SEVERITY_CRITICAL = 4;
}

enum QualityImpact {
  QUALITY_IMPACT_UNSPECIFIED = 0;
  QUALITY_IMPACT_LOW = 1;
  QUALITY_IMPACT_MEDIUM = 2;
  QUALITY_IMPACT_HIGH = 3;
  QUALITY_IMPACT_CRITICAL = 4;
}

enum EnforcementLevel {
  ENFORCEMENT_LEVEL_UNSPECIFIED = 0;
  ENFORCEMENT_LEVEL_ADVISORY = 1;
  ENFORCEMENT_LEVEL_WARNING = 2;
  ENFORCEMENT_LEVEL_ENFORCING = 3;
  ENFORCEMENT_LEVEL_STRICT = 4;
}

// ============================================================================
// COMMON TYPES
// ============================================================================

message AgentSuggestion {
  string suggestion_id = 1;
  string title = 2;
  string description = 3;
  SuggestionType suggestion_type = 4;
  ActionType action_type = 5;
  google.protobuf.Struct parameters = 6;
  float confidence = 7;
  uint32 priority = 8;
  string estimated_impact = 9;
}

message ResponseMetrics {
  uint64 processing_time_ms = 1;
  uint64 memory_usage_bytes = 2;
  uint32 api_calls_made = 3;
  uint32 tokens_processed = 4;
  repeated string resources_accessed = 5;
}

// SuggestionType is imported from agent_service.proto
